--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@ html,body{
                </p>
             </div>
             <ul>
-               <a href="https://liff.line.me/2006731030-V7AWZeQz"><i class="bank bank-pp xxxl round shadow"></i></a>
-               <a href="https://liff.line.me/2006731036-R89Ae76Y"><i class="bank bank-tmn xxxl round shadow"></i></a>
-               <a href="https://tmn.app.link/9zb3AXwKFPb"><i class="bank bank-tmn  xxxl round shadow"></i></a>
+<!--                <a href="https://liff.line.me/2006731030-V7AWZeQz"><i class="bank bank-pp xxxl round shadow"></i></a>
+               <a href="https://liff.line.me/2006731036-R89Ae76Y"><i class="bank bank-tmn xxxl round shadow"></i></a> -->
+               <a href="https://tmn.app.link/pXxrv865HPb"><i class="bank bank-tmn  xxxl round shadow"></i></a>
                
             </ul>
          </div>
