--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ html,body{
                   SOMCHAI THUMARIYA
                </div>
                <p>
-                  ชื่อบัญชีต้องเป็น <b> สมชาย ทุมอาริย </b> เท่านั้น <br>ช่องทางชำระเงินด้วยคิวอาร์โค้ดอื่นๆ ของ Thumariya Blog 
+                  ชื่อบัญชีต้องเป็น <b> สมชาย ทุมอาริยะ </b> เท่านั้น <br>ช่องทางชำระเงินด้วยคิวอาร์โค้ดอื่นๆ ของ Thumariya Blog 
                </p>
             </div>
             <ul>
