--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-
+ 
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
    <head>
@@ -21,7 +21,7 @@ html,body{
   height: 100%;
   width: 100%;
   place-items: center;
-  background: linear-gradient(375deg, #000000, #CC0000);
+  background: linear-gradient(375deg, Yellow, Green);
 }
 ::selection{
   color: #fff;
@@ -70,14 +70,15 @@ html,body{
   height: 150px;
   width: 150px;
   padding: 5px;
-  border-radius: 50%;
+  border-radius: 100%;
+  /* background: linear-gradient(375deg, Yellow, Green);*/
   background: linear-gradient(375deg, #000000, #CC0000);
 }
 .wrapper .back-face .info{
   text-align: center;
 }
 .back-face .info .title{
-  font-size: 30px;
+  font-size: 22px;
   font-weight: 500;
 }
 .back-face ul{
