--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ html,body{
   padding: 5px;
   border-radius: 100%;
   /* background: linear-gradient(375deg, Yellow, Green);*/
-  background: linear-gradient(375deg, #000000, #CC0000);
+  background: linear-gradient(375deg, Red, Pink);
 }
 .wrapper .back-face .info{
   text-align: center;
